# zallet

./: .dockerignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.stagex  README.md  deny.toml  example.ts  flake.nix
.github/: zizmor.yml
.github/workflows/: audits.yml  binaries-and-deb-release.yml  book.yml  build-arm64-nix.yml  ci.yml  integration.yml  lints.yml
backends/zaino/: Cargo.toml  build.rs
backends/zaino/src/: chain.rs  main.rs  read_state.rs
backends/zaino/supply-chain/: config.toml
backends/zaino/tests/: acceptance.rs
backends/zebra/: Cargo.toml  build.rs
backends/zebra/src/: chain.rs  main.rs  read_state.rs
backends/zebra/src/chain/: convert.rs  reader.rs  rpc.rs
backends/zebra/supply-chain/: audits.toml  config.toml
backends/zebra/tests/: acceptance.rs
backends/zebra/tests/cmd/: example_config.toml  migrate_zcash_conf_mainnet.toml  migrate_zcash_conf_regtest.toml  migrate_zcash_conf_testnet.toml
backends/zebra/tests/cmd/example_config.out/: zallet.toml
backends/zinder/: Cargo.toml  build.rs
backends/zinder/proto/zinder/: COMMIT  UPSTREAM.md
backends/zinder/proto/zinder/zinder/v1/ops/: server_info.proto
backends/zinder/proto/zinder/zinder/v1/wallet/: wallet.proto
backends/zinder/src/: chain.rs  main.rs
backends/zinder/src/chain/: convert.rs  error.rs  proto.rs
backends/zinder/supply-chain/: config.toml
book/: book.toml
book/src/: README.md  SUMMARY.md  troubleshooting.md
book/src/cli/: migrate-zcashd-wallet.md
book/src/concepts/: accounts.md  async-operations.md  encryption.md  legacy-pool.md  notes.md
book/src/config/: README.md
book/src/guide/: backup.md  first-wallet.md  setup.md
book/src/guide/installation/: README.md  docker.md
book/src/operations/: README.md
book/src/rpc/: README.md  methods.md
book/src/slsa/: slsa.md
book/src/zcashd/: README.md  json_rpc.md  rpc_status.md
crates/zebra-read-state/: Cargo.toml
crates/zebra-read-state/src/: lib.rs
supply-chain/: audits.toml  config.toml
tools/gen-copyright/: Cargo.toml
tools/gen-copyright/src/: main.rs
utils/: check-lockstep.sh  sync-librustzcash.sh
zallet/: Cargo.toml
zallet-core/: Cargo.toml  build.rs
zallet-core/i18n/en-US/: zallet_core.ftl
zallet-core/src/: application.rs  cli.rs  commands.rs  components.rs  config.rs  error.rs  lib.rs  migrate.rs  network.rs
zallet-core/src/commands/: migrate_zcashd_wallet.rs  rpc_cli.rs  start.rs
zallet-core/src/components/: chain.rs  database.rs  json_rpc.rs  keystore.rs  sync.rs
zallet-core/src/components/chain/: error.rs  zaino.rs  zebra.rs
zallet-core/src/components/chain/zebra/: reader.rs
zallet-core/src/components/database/: connection.rs  tests.rs
zallet-core/src/components/json_rpc/: asyncop.rs  fund_source.rs  methods.rs  payments.rs  server.rs  utils.rs
zallet-core/src/components/json_rpc/methods/: advance_pool_migration.rs  apply_pool_migration_signature.rs  build_pool_migration_transfers.rs  cancel_pool_migration.rs  clear_locked_outputs.rs  convert_tex.rs  get_balances.rs  get_new_account.rs  get_notes_count.rs  get_operation.rs  get_pool_migration_status.rs  get_raw_transaction.rs  get_wallet_info.rs  get_wallet_status.rs  help.rs  import_key.rs  import_viewing_key.rs  list_pool_migrations.rs  list_transactions.rs  list_unspent.rs  pczt_combine.rs  pczt_common.rs  pczt_create.rs  pczt_error.rs  pczt_extract.rs  pczt_prove.rs  pczt_sign.rs  pool_migration.rs  preview_pool_migration.rs  recover_accounts.rs  sign_pool_migration_pczt.rs  start_pool_migration.rs  unlock_wallet.rs  view_transaction.rs  z_export_viewing_key.rs  z_finalize_transaction.rs  z_get_balance_for_account.rs  z_get_total_balance.rs  z_propose_transaction.rs  z_send_from_account.rs  (+2 more)
zallet-core/src/components/keystore/: error.rs  zewif.rs
zallet-core/src/components/sync/: locator.rs  status.rs  steps.rs
zallet-core/tests/: book_rpc_reference.rs
zallet/ci/: integration-features
zallet/src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  network.rs
zallet/src/commands/: init_wallet_encryption.rs  migrate_zcashd_wallet.rs  rpc_cli.rs  start.rs
zallet/src/components/: chain.rs  database.rs  keystore.rs  sync.rs
zallet/src/components/chain/: zaino.rs  zebra.rs
zallet/src/components/database/: connection.rs
zallet/src/components/json_rpc/: methods.rs
zallet/src/components/json_rpc/methods/: decode_script.rs  view_transaction.rs  z_send_many.rs  z_shieldcoinbase.rs
zallet/src/components/json_rpc/server/: cookie.rs
