[workspace]
members = ["zallet-core", "zallet", "tools/gen-copyright"]
exclude = ["backends", "crates"]
resolver = "2"

[workspace.package]
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/zcash/zallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = "1"

# Data structures
nonempty = "0.11"

# Build script
shadow-rs = { version = "1.2", default-features = false }

# Documentation
documented = "0.9"
phf = { version = "0.12", features = ["macros"] }
quote = "1"
syn = "2"

# Filesystem
fmutex = "0.3"
home = "0.5"
known-folders = "1"
xdg = "2.5"

# Hashing
hmac = "0.12"
ripemd = "0.1"
sha2 = "0.10"

# Key storage
age = { version = "0.11", features = ["armor", "cli-common", "plugin"] }
bip0039 = "0.12"

# Localization
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Packaging
clap_complete = "4"
clap_mangen = "0.2"
cargo_metadata = "0.18"
embed-licensing = "0.3"
embed-licensing-core = "0.3"
flate2 = "1"
spdx = "0.10"

# Parsing and serialization
base64ct = "1.8"
hex = "0.4"
serde = { version = "1", features = ["serde_derive"] }
semver = "1"
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
toml = "0.8"
zcash_address = "0.13.0-pre.0"

# Randomness
rand = "0.8"

# Secret management
secrecy = { version = "0.8", features = ["serde"] }

# CLI
abscissa_core = "0.9"
abscissa_tokio = "0.9"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"

# RPC
http-body-util = "0.1"
hyper = "1"
jsonrpsee = "0.24"
jsonrpsee-http-client = { version = "0.24", default-features = false }
nix = "0.29" # `stop` RPC method
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde-arbitrary-precision",
    "serde-float",
] }
schemars = "1"
tower = "0.4"

# Testing
once_cell = "1.2"
proptest = "1.9"
regex = "1.4"
tempfile = "3"
trycmd = "0.15"

# Tracing
console-subscriber = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"

# Zcash consensus
zcash_protocol = "0.10.0-pre.0"

# Zcash payment protocols
orchard = "0.15.0-pre.1"
sapling = { package = "sapling-crypto", version = "0.7" }
transparent = { package = "zcash_transparent", version = "0.9.0-pre.0" }
zcash_encoding = "0.4"
zcash_keys = { version = "0.15.0-pre.0", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
    "transparent-key-encoding",
] }
zcash_primitives = "0.29.0-pre.0"
zcash_proofs = "0.29.0-pre.0"
zcash_script = "0.4.3"
secp256k1 = { version = "0.29", features = ["recovery"] }

# Zcash chain state

# Encodings
# Zcash wallet
deadpool = "0.12"
deadpool-sqlite = "0.12"
deadpool-sync = "0.1"
incrementalmerkletree = "0.8.2"
rusqlite = { version = "0.37", features = ["time"] }
schemerz = "0.2"
schemerz-rusqlite = "0.370.0"
shardtree = "0.6"
time = "0.3"
uuid = "1"
zcash_client_backend = "0.23"
zcash_client_sqlite = "0.21"
zcash_note_encryption = "0.4"
zip32 = "0.2"
bip32 = "0.2"

# Zcashd wallet migration
zewif = { version = "0.1" }
zewif-zcashd = { version = "0.1" }
which = "8.0"
anyhow = "1.0"

# lightwalletd (temporary)
tonic = "0.14"

[patch.crates-io]
# Temporary pin to librustzcash/main.
# This should point to a proper release on crates.io
equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
f4jumble = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
# NOTE: zcash_history is deliberately NOT patched here: the root graph does not
# use it (only the backend workspaces do, and their patch blocks carry it).
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "cac64ba2b47545f23d356002e4a9f02aaaabc083" }

age = { git = "https://github.com/str4d/rage.git", rev = "92f437bc2a061312fa6633bb70c91eef91142fd4" }

zewif = { git = "https://github.com/zcash/zewif.git", rev = "0a5a234490a339ca8dda13614146e4769a3cd963" }
zewif-zcashd = { git = "https://github.com/zcash/zewif-zcashd.git", rev = "c640713b91b79d153a7fee2888088931cd7e8326" }

[profile.release]
debug = "line-tables-only"
