[workspace]
members = ["zallet-core", "zallet", "tools/gen-copyright"]
exclude = ["backends"]
resolver = "2"

[workspace.package]
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/zcash/zallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = "1"

# Data structures
nonempty = "0.11"

# Build script
shadow-rs = { version = "1.2", default-features = false }

# Documentation
documented = "0.9"
phf = { version = "0.12", features = ["macros"] }
quote = "1"
syn = "2"

# Filesystem
fmutex = "0.3"
home = "0.5"
known-folders = "1"
xdg = "2.5"

# Hashing
blake2b_simd = "1"
hmac = "0.12"
ripemd = "0.1"
sha2 = "0.10"

# Key storage
age = { version = "0.11", features = ["armor", "cli-common", "plugin"] }
bech32 = "0.11"
bip0039 = "0.12"

# Localization
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# Packaging
clap_complete = "4"
clap_mangen = "0.2"
cargo_metadata = "0.18"
embed-licensing = "0.3"
embed-licensing-core = "0.3"
flate2 = "1"
spdx = "0.10"

# Parsing and serialization
base64ct = "1.8"
hex = "0.4"
serde = { version = "1", features = ["serde_derive"] }
semver = "1"
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
toml = "0.8"
zcash_address = "0.13.0"

# Randomness
rand = "0.8"

# Secret management
secrecy = { version = "0.8", features = ["serde"] }

# CLI
abscissa_core = "0.9"
abscissa_tokio = "0.9"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"

# RPC
http-body-util = "0.1"
hyper = "1"
jsonrpsee = "0.24"
jsonrpsee-http-client = { version = "0.24", default-features = false }
nix = "0.29" # `stop` RPC method
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde-arbitrary-precision",
    "serde-float",
] }
schemars = "1"
tower = "0.4"

# Testing
once_cell = "1.2"
proptest = "1.9"
regex = "1.4"
tempfile = "3"
trycmd = "0.15"

# Tracing
console-subscriber = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"

# Zcash consensus
zcash_protocol = "0.10.0"

# Zcash payment protocols
orchard = "0.15.0"
sapling = { package = "sapling-crypto", version = "0.7" }
transparent = { package = "zcash_transparent", version = "0.9.0" }
zcash_encoding = "0.4"
zcash_keys = { version = "0.15.0", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
    "transparent-key-encoding",
] }
zcash_primitives = "0.29.0"
zcash_proofs = "0.29.0"
zcash_script = "0.4.3"
zcash_spec = "0.2"
secp256k1 = { version = "0.29", features = ["recovery"] }

# Zcash chain state

# Encodings
# Zcash wallet
deadpool = "0.12"
deadpool-sqlite = "0.12"
deadpool-sync = "0.1"
incrementalmerkletree = "0.8.2"
rusqlite = { version = "0.37", features = ["time"] }
schemerz = "0.2"
schemerz-rusqlite = "0.370.0"
shardtree = "0.7"
time = "0.3"
uuid = "1"
zcash_client_backend = "0.24.0-rc.1"
zcash_client_sqlite = "0.22.0-rc.1"
zcash_note_encryption = "0.4"
zip32 = "0.2"
bip32 = "0.2"

# Zcashd wallet migration
zewif = { version = "1.0.0-rc.2" }
zewif-zcashd = { version = "0.1.0-rc.2" }
which = "8.0"
anyhow = "1.0"

# lightwalletd (temporary)
tonic = "0.14"

[patch.crates-io]
# Temporary pin to rage/main: the keystore uses age APIs (`EncryptedIdentity`,
# `Send + Sync` bounds on `IdentityFile::into_identities`) that the 0.11.x
# maintenance releases exclude. Replace with the crates.io release once
# rage 0.12 ships.
age = { git = "https://github.com/str4d/rage.git", rev = "d28f10ee776ce7391f7065695997f998631b113a" }

# Temporary patch for `WalletDb::transactionally_with_extension` (adds atomic
# z_importkey account+key writes), merged upstream but not yet released. The API
# lives in zcash_client_sqlite, but the repo is a workspace: pinning only that
# crate pulls its path-dep siblings from git while their crates.io copies remain,
# duplicating the librustzcash stack, so the whole stack is pinned to one rev.
# Replace with the crates.io releases once the next zcash_client_sqlite release
# ships.
equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
f4jumble = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }
zip321 = { git = "https://github.com/zcash/librustzcash.git", rev = "d09d1f390f2e4e3d8978bedfe84dd18aeceef008" }

[profile.release]
debug = "line-tables-only"
