[package]
name = "zallet-zaino"
version = "0.1.0-alpha.4"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.88"
description = "A prototype wallet, using the Zaino chain indexer. Don't rely on this for privacy or with significant funds yet!"
repository = "https://github.com/zcash/zallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
publish = false

# This package is deliberately its own workspace root with its own lockfile, so its
# zebra-* dependency versions (via the zaino crates) can move independently of the
# zebra-state backend's (librocksdb-sys's `links = "rocksdb"` forbids two zebra-state
# versions in one resolution graph). See https://github.com/zcash/zallet/issues/540.
[workspace]

[dependencies]
zallet-core = { path = "../../zallet-core" }

futures = "0.3"
hex = "0.4"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
orchard = "0.15.0"
sapling = { package = "sapling-crypto", version = "0.7" }
jsonrpsee = "0.24"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
transparent = { package = "zcash_transparent", version = "0.9.0" }
zaino-common = "0.2"
zaino-fetch = "0.2.1"
zaino-state = "0.3.1"
zcash_client_backend = "0.23"
zcash_keys = { version = "0.15.0", features = ["unstable"] }
zcash_primitives = "0.29.0"
zcash_protocol = "0.10.0"
zebra-chain = "11"
zebra-rpc = "11"
zebra-state = "10"

[features]
default = []

## Per-outpoint transparent spend detection. Deliberately NOT enabled for this
## backend (it uses address-based spend detection instead); the feature exists so
## the sources track zallet-core's API shape.
spend-index = ["zallet-core/spend-index"]

## Allows `zallet-zaino` to import zcashd wallets.
zcashd-import = ["zallet-core/zcashd-import"]

## `zallet-zaino rpc` CLI support.
rpc-cli = ["zallet-core/rpc-cli"]

## `tokio-console` support.
tokio-console = ["zallet-core/tokio-console"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tokio_unstable)',
    'cfg(zallet_build, values("merchant_terminal", "wallet"))',
    'cfg(zcash_unstable, values("nu7"))',
] }

[dev-dependencies]
abscissa_core = { version = "0.9", features = ["testing"] }
once_cell = "1.2"
tempfile = "3"

[patch.crates-io]
# Keep this block in sync with the workspace-root Cargo.toml (utils/check-lockstep.sh
# enforces resolved-version identity in CI; all binaries share one wallet database, so
# the librustzcash stack must resolve identically in every workspace). Deliberate
# delta vs the root block: zcash_history is patched HERE but not at the root, because
# only the backend graphs use it.
#
# Update the librustzcash rev ONLY via utils/sync-librustzcash.sh (which syncs
# all three manifests and lockfiles at once); do not edit these revs by hand.
equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
f4jumble = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_history = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "8080922ec295afffdfb9a44955f57c2dd2b28fec" }

# Temporary pin to rage/main: the keystore uses age APIs (`EncryptedIdentity`,
# `Send + Sync` bounds on `IdentityFile::into_identities`) that the 0.11.x
# maintenance releases exclude. Replace with the crates.io release once
# rage 0.12 ships.
age = { git = "https://github.com/str4d/rage.git", rev = "d28f10ee776ce7391f7065695997f998631b113a" }

# TEMPORARY: pin the zaino crates to zingolabs/zaino `dev` (currently 8048bf8d),
# which surfaces the Ironwood (NU6.3) note commitment treestate from
# `get_treestate` (now a `(sapling, orchard, ironwood)` triple of
# `PoolTreestate`). Reading the real Ironwood frontier is required for Ironwood
# notes to be spendable; an empty frontier conflicts with the wallet's advancing
# tree and sync fails with `CheckpointConflict`. Repoint at upstream zaino once
# the NU6.3 work lands in a release.
zaino-common = { git = "https://github.com/zingolabs/zaino.git", rev = "8048bf8df61cd409af8c22518a16514bee02a0fb" }
zaino-fetch = { git = "https://github.com/zingolabs/zaino.git", rev = "8048bf8df61cd409af8c22518a16514bee02a0fb" }
zaino-state = { git = "https://github.com/zingolabs/zaino.git", rev = "8048bf8df61cd409af8c22518a16514bee02a0fb" }
